--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
-import clipboard from '../../public/copy.svg'
-import github from '../../public/github.svg'
+import clipboard from "../../public/copy.svg";
+import banner from "../../public/banner.webp";
+
+import ExampleComponent from "../components/Example.astro";
 ---
 
 <html lang="en">
@@ -17,13 +19,13 @@ import github from '../../public/github.svg'
     <meta property="og:url" content="" />
     <meta property="og:title" content="MRT Jakarta API Documentation" />
     <meta property="og:description" content="" />
-    <meta property="og:image" itemprop="image" content="/banner.webp" />
+    <meta property="og:image" itemprop="image" content={banner} />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="" />
     <meta property="twitter:title" content="MRT Jakarta API Documentation" />
     <meta property="twitter:description" content="" />
-    <meta property="twitter:image" content="/banner.webp" />
+    <meta property="twitter:image" content={banner} />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,138 +35,221 @@ import github from '../../public/github.svg'
     />
 
     <title>MRT Jakarta API Documentation</title>
+
+    <script
+      src="https://gist.github.com/reksamamur/77f1563dc46f73fb72bd92280007dee9.js"
+    ></script>
   </head>
-  <body>
-    <div class="container mx-auto px-4 lg:px-48 py-20 lg:py-56 space-y-6">
-      <div id="header" class="flex flex-col space-y-6">
-        <h1 class="text-6xl font-medium">MRT Jakarta API Documentation</h1>
-        <div class="flex items-center space-x-4">
-          <span class="text-lg font-source-code-pro font-medium">v1</span>
-          <a
-            href="https://github.com/reksamamur/mrt-jakarta-api"
-            target="_blank"
-            id="github.link"
-            class="flex items-center py-2 px-3 space-x-3 rounded-md cursor-pointer hover:bg-zinc-50 hover:text-blue-500"
-          >
-            <img src={github} alt="Github icon" class="stroke-blue-500" />
-            <span class="text-base font-semibold">Github</span>
-          </a>
-          <div>
-            <div>EN</div>
-            <div>ID</div>
-          </div>
-        </div>
-        <div
-          class="flex items-center justify-between font-source-code-pro bg-zinc-50 border-2 border-zinc-100 rounded-lg p-4"
+
+  <body class="md:container md:mx-auto px-10 py-20 space-y-6">
+    <div id="header" class="flex flex-col space-y-8">
+      <h1 class="text-6xl font-medium">MRT Jakarta API Documentation</h1>
+      <div class="flex items-center space-x-3">
+        <span
+          class="text-base py-2 px-3 border-2 border-zinc-300 rounded-md font-source-code-pro font-medium"
+          >v1</span
         >
-          <a
-            href="https://mrt-jakarta-api-production.up.railway.app/v1"
-            class="hover:underline hover:text-blue-500"
-            target="_blank"
-            >https://mrt-jakarta-api-production.up.railway.app/v1</a
+        <a
+          href="https://github.com/reksamamur/mrt-jakarta-api"
+          target="_blank"
+          id="github.link"
+          class="flex items-center py-2 px-3 space-x-3 border-2 border-zinc-300 rounded-md cursor-pointer hover:bg-zinc-50 hover:text-blue-500"
+        >
+          <span class="text-base font-semibold">Github</span>
+        </a>
+        <div class="flex space-x-2">
+          <div
+            class="py-2 px-3 border-2 border-zinc-300 rounded-md cursor-pointer hover:bg-zinc-50 hover:text-blue-500"
           >
-
-          <button
-            class="p-2 border-[1.5px] text-zinc-800 border-zinc-200 hover:bg-zinc-100 hover:text-blue-500 rounded-lg"
-          >
-			<img src={clipboard} alt="Copy URL" />
-          </button>
-        </div>
-        <div class="border-b-2 border-zinc-300 rounded-full"></div>
-      </div>
-
-      <div id="content" class="space-y-3">
-        <h2 class="text-3xl font-medium">What is this?</h2>
-        <p class="text-base">Descriptions</p>
-      </div>
-
-      <div id="content" class="space-y-6">
-        <div id="stations" class="space-y-4">
-          <h1 class="font-medium py-2 text-2xl">Stations</h1>
-
-          <div class="space-y-1">
-            <h3 class="text-lg font-medium">Description</h3>
-            <p class="text-base">End point description</p>
+            EN
           </div>
+          <div
+            class="py-2 px-3 border-2 border-zinc-300 rounded-md cursor-pointer hover:bg-zinc-50 hover:text-blue-500"
+          >
+            ID
+          </div>
+        </div>
+      </div>
+      <div
+        class="flex items-center justify-between font-source-code-pro bg-zinc-50 border-2 border-zinc-100 rounded-lg p-4"
+      >
+        <a
+          href="https://mrt-jakarta-api-production.up.railway.app/v1"
+          class="hover:underline hover:text-blue-500"
+          target="_blank"
+          >https://mrt-jakarta-api-production.up.railway.app/v1</a
+        >
 
-          <div class="space-y-1">
-            <h3 class="text-lg font-medium">URL</h3>
-            <div
-              class="flex items-center justify-between font-source-code-pro bg-zinc-50 border-2 border-zinc-100 rounded-lg p-4"
+        <button
+          class="p-2 border-[1.5px] text-zinc-800 border-zinc-200 hover:bg-zinc-100 hover:text-blue-500 rounded-lg"
+        >
+          <img src={clipboard} alt="Copy URL" />
+        </button>
+      </div>
+      <div class="border-b-2 border-zinc-300 rounded-full"></div>
+    </div>
+
+    <div id="content" class="space-y-3">
+      <h2 class="text-4xl font-medium">What is this?</h2>
+      <p class="text-base">Descriptions</p>
+    </div>
+
+    <div id="content" class="space-y-6">
+      <div id="stations" class="space-y-4">
+        <h1 class="font-medium py-2 text-3xl">Stations</h1>
+
+        <div class="space-y-1">
+          <h3 class="text-lg font-medium">Description</h3>
+          <p class="text-base">End point description</p>
+        </div>
+
+        <div class="space-y-1">
+          <h3 class="text-lg font-medium">URL</h3>
+          <div
+            class="flex items-center justify-between font-source-code-pro bg-zinc-50 border-2 border-zinc-100 rounded-lg p-4"
+          >
+            <a
+              href="https://mrt-jakarta-api-production.up.railway.app/v1/stations"
+              class="hover:underline hover:text-blue-500"
+              target="_blank"
+              >https://mrt-jakarta-api-production.up.railway.app/v1/stations</a
             >
-              <a
-                href="https://mrt-jakarta-api-production.up.railway.app/v1"
-                class="hover:underline hover:text-blue-500"
-                target="_blank"
-                >https://mrt-jakarta-api-production.up.railway.app/v1</a
-              >
 
-              <button
-                class="p-2 border-[1.5px] text-zinc-800 border-zinc-200 hover:bg-zinc-100 hover:text-blue-500 rounded-lg"
-              >
-                <img src={clipboard} alt="Copy URL" />
-              </button>
-            </div>
+            <button
+              class="p-2 border-[1.5px] text-zinc-800 border-zinc-200 hover:bg-zinc-100 hover:text-blue-500 rounded-lg"
+            >
+              <img src={clipboard} alt="Copy URL" />
+            </button>
           </div>
+        </div>
 
-          <h1>example</h1>
-        </div>
-        <div id="station.id">
-          <h1>End point</h1>
-          <h1>end point name</h1>
-          <h1>url api</h1>
-          <h1>example</h1>
-        </div>
-        <div id="station.id.schedules">
-          <h1>End point</h1>
-          <h1>end point name</h1>
-          <h1>url api</h1>
-          <h1>example</h1>
-        </div>
-        <div id="station.id.schedules.now">
-          <h1>End point</h1>
-          <h1>end point name</h1>
-          <h1>url api</h1>
-          <h1>example</h1>
-        </div>
-        <div id="station.id.schedules.milliseconds">
-          <h1>End point</h1>
-          <h1>end point name</h1>
-          <h1>url api</h1>
-          <h1>example</h1>
-        </div>
-        <div id="station.id.retails">
-          <h1>End point</h1>
-          <h1>end point name</h1>
-          <h1>url api</h1>
-          <h1>example</h1>
-        </div>
-        <div id="station.id.facilities">
-          <h1>End point</h1>
-          <h1>end point name</h1>
-          <h1>url api</h1>
-          <h1>example</h1>
-        </div>
-        <div id="station.id.estimates.next_id">
-          <h1>End point</h1>
-          <h1>end point name</h1>
-          <h1>url api</h1>
-          <h1>example</h1>
+        <div class="space-y-1">
+          <h3 class="text-lg font-medium">Results</h3>
+          <iframe
+            style="width: 100%; height: 55vh;"
+            src="data:text/html;charset=utf-8,
+            <head><base target='_blank' /></head>
+            <body><script src='https://gist.github.com/reksamamur/77f1563dc46f73fb72bd92280007dee9.js'></script>
+            </body>"
+          ></iframe>
         </div>
       </div>
 
-      <div id="footer" class="flex flex-col space-y-4">
-        <div>
-          <h2 class="text-2xl font-medium">API reference</h2>
+      <div id="station.id" class="space-y-4">
+        <h1 class="font-medium py-2 text-3xl">Station (station id)</h1>
 
-          <div>
-            Resource Information
-            <li>Response format</li>
-            <li>Require auth?</li>
-            <li>Rate limited?</li>
-          </div>
-          <div>Parameters</div>
+        <div class="space-y-1">
+          <h3 class="text-lg font-medium">Description</h3>
+          <p class="text-base">End point description</p>
         </div>
+
+        <div class="space-y-1">
+          <h3 class="text-lg font-medium">URL</h3>
+          <div
+            class="flex items-center justify-between font-source-code-pro bg-zinc-50 border-2 border-zinc-100 rounded-lg p-4"
+          >
+            <a class="hover:underline hover:text-blue-500"
+              >https://mrt-jakarta-api-production.up.railway.app/v1/station/(station
+              id)</a
+            >
+
+            <button
+              class="p-2 border-[1.5px] text-zinc-800 border-zinc-200 hover:bg-zinc-100 hover:text-blue-500 rounded-lg"
+            >
+              <img src={clipboard} alt="Copy URL" />
+            </button>
+          </div>
+        </div>
+
+        <div class="space-y-1">
+          <h3 class="text-lg font-medium">Example</h3>
+          <div>
+            <table class="w-fit border text-left">
+              <tr>
+                <th class="p-2 border-b bg-gray-50">URL</th>
+                <td class="p-2 border-b border-l bg-white">
+                  <a class="hover:underline hover:text-blue-500" href="https://mrt-jakarta-api-production.up.railway.app/v1/station/38" target="_blank">https://mrt-jakarta-api-production.up.railway.app/v1/station/38</a>
+                </td>
+              </tr>
+              <tr>
+                <th>Method</th>
+              </tr>
+              <tr>
+                <th class="p-2 border-b bg-gray-50">Parameter</th>
+                <td class="p-2 border-b border-l bg-white">38</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+        <div class="space-y-1">
+          <h3 class="text-lg font-medium">Results</h3>
+          <iframe
+            style="width: 100%; height: 55vh;"
+            src="data:text/html;charset=utf-8,
+            <head><base target='_blank' /></head>
+            <body><script src='https://gist.github.com/reksamamur/c854c6bdc58fbab5599c9406d3fb5f4f.js'></script>
+            </body>"
+          ></iframe>
+        </div>
+      </div>
+      
+      <div id="station.id.schedules">
+        <ExampleComponent 
+          title="Schedule station (station id)" 
+          description="Test" 
+          path="/station/:station_id/schedules" 
+        />
+      </div>
+
+      <div id="station.id.schedules.now">
+        <h1>End point</h1>
+        <h1>end point name</h1>
+        <h1>url api</h1>
+        <h1>example</h1>
+      </div>
+      
+      <div id="station.id.schedules.milliseconds">
+        <h1>End point</h1>
+        <h1>end point name</h1>
+        <h1>url api</h1>
+        <h1>example</h1>
+      </div>
+
+      <div id="station.id.retails">
+        <h1>End point</h1>
+        <h1>end point name</h1>
+        <h1>url api</h1>
+        <h1>example</h1>
+      </div>
+
+      <div id="station.id.facilities">
+        <h1>End point</h1>
+        <h1>end point name</h1>
+        <h1>url api</h1>
+        <h1>example</h1>
+      </div>
+
+      <div id="station.id.estimates.next_id">
+        <h1>End point</h1>
+        <h1>end point name</h1>
+        <h1>url api</h1>
+        <h1>example</h1>
+      </div>
+
+    </div>
+
+    <div id="footer" class="flex flex-col space-y-4">
+      <div>
+        <h2 class="text-2xl font-medium">API reference</h2>
+
+        <div>
+          Resource Information
+          <li>Response format</li>
+          <li>Require auth?</li>
+          <li>Rate limited?</li>
+        </div>
+        <div>Parameters</div>
       </div>
     </div>
   </body>
